[bumpversion]
current_version = 0.2.3

[metadata]
description-file = README.md

[coverage:run]
omit = 
	exampeles/*
	*/dist-packages/*
	tests.py

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
ignore = 
	E501,
	W503,
	E203,
	D202,
	W504,
	D100
	D101,
	D102,
	D103,
	D105,
	D107,
	D400,
	D401
noqa-require-code = True
