[bumpversion]
current_version = 0.3.6
commit = True
tag = True
tag_name = {new_version}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[bumpversion:file:aiooncue/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"

[metadata]
description-file = README.md

[coverage:run]
omit =
	exampeles/*
	*/dist-packages/*
	tests.py

[flake8]
exclude = .venv,.git,.tox,docs,venv,bin,lib,deps,build
max-complexity = 25
doctests = True
ignore =
	E501,
	W503,
	E203,
	D202,
	W504,
	D100
	D101,
	D102,
	D103,
	D105,
	D107,
	D400,
	D401
noqa-require-code = True
